# scanbox

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/commands/: ship.md  test-pdfs.md
.claude/hooks/: enforce-worktree.py  session-start.sh  worktree-cleanup.sh  worktree-setup.sh
.claude/rules/: environments.md  headless-execution.md  implementation-context.md  medical-document-generator.md  tech-stack-2026.md
.gitea/workflows/: ci.yml
.githooks/: pre-commit  setup.sh
.github/workflows/: ci.yml  lint-pr.yml  release-please.yml  release.yml
docs/: api-spec.md  design.md  local-llm.md  mcp-server.md  ui-spec.md
docs/plans/: 2026-03-28-scanbox-implementation.md
scanbox/: __init__.py  config.py  database.py  main.py  models.py
scanbox/api/: batches.py  boundaries.py  calibration.py  documents.py  import_batch.py  paperless.py  persons.py  practice.py  scanner.py  scanning.py  sessions.py  setup.py  sse.py  views.py  webhooks.py
scanbox/mcp/: __main__.py  server.py
scanbox/pipeline/: blank_detect.py  interleave.py  namer.py  ocr.py  output.py  runner.py  splitter.py  state.py
scanbox/scanner/: discovery.py  escl.py  models.py  monitor.py
scanbox/templates/: base.html  boundary_editor.html  document_card.html  document_edit.html  home.html  persons_list.html  pipeline.html  practice.html  results.html  save_result.html  scan.html  scan_summary.html  scanner.html  settings.html  setup.html
static/css/: app.css
static/js/: alpine.min.js  htmx.min.js  idiomorph-ext.min.js
tests/: calibrate_confidence.py  compare_llm_splits.py  conftest.py  generate_fixtures.py  generate_medical_pile.py  generate_test_suite.py  test_smoke.py
tests/e2e/: test_e2e_synthetic.py  (+1 more)
(+122 files in other folders)
